Create index.html with issue

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>My git practical</title>
   </head>
   <body>
-    <h1>My git practical and description</h1>
+    <h1>My git practical` and description</h1>
   </body>
 </html>
